package ui;

import javax.swing.*;
import java.awt.*;
import model.*;

public class VentanaRegistroHombres extends JFrame {
    private Carrera carrera;
    private JTextField txtNombre, txtApellidoP, txtApellidoM, txtEdad, txtFacultad;
    private JFrame ventanaPrincipal;

    public VentanaRegistroHombres(Carrera carrera, JFrame ventanaPrincipal) {
        this.carrera = carrera;
        this.ventanaPrincipal = ventanaPrincipal;
        String imgFondo = "../images/Hombre.png";
        FPanel back = new FPanel(imgFondo);

        setTitle("Registro de Asistentes Hombres");
        setExtendedState(JFrame.MAXIMIZED_BOTH);
        setDefaultCloseOperation(JFrame.DO_NOTHING_ON_CLOSE);
        setLocationRelativeTo(null);
        getContentPane().setBackground(new Color(0,51,102));
        
        setLayout(new BorderLayout(0, 10));
        
        JPanel panelHeader = new JPanel();
        panelHeader.setLayout(new BoxLayout(panelHeader, BoxLayout.Y_AXIS));
        panelHeader.setBorder(BorderFactory.createEmptyBorder(20, 0, 20, 0));
        panelHeader.setBackground(new Color(0,51,102));
        panelHeader.setOpaque(false);


        JLabel lblTitulo1 = new JLabel("CARRERA BUAP 2025");
        lblTitulo1.setFont(new Font("Serif", Font.BOLD, 36));
        lblTitulo1.setAlignmentX(Component.CENTER_ALIGNMENT);
        lblTitulo1.setForeground(Color.WHITE);

        JLabel lblTitulo2 = new JLabel("REGISTRO DE ASISTENTES HOMBRES");
        lblTitulo2.setFont(new Font("Serif", Font.PLAIN, 24));
        lblTitulo2.setAlignmentX(Component.CENTER_ALIGNMENT);
        lblTitulo2.setForeground(Color.WHITE);

        panelHeader.add(lblTitulo1);
        panelHeader.add(Box.createRigidArea(new Dimension(0, 10)));
        panelHeader.add(lblTitulo2);
        
        add(panelHeader, BorderLayout.NORTH);
        
        JPanel panelFooter = new JPanel(new FlowLayout(FlowLayout.CENTER, 15, 15));
        panelFooter.setBackground(new Color(0,51,102)); // Fondo azul BUAP
        panelFooter.setBorder(BorderFactory.createMatteBorder(1, 0, 0, 0, new Color(0,51,102)));

        JButton btnRegistrar = new JButton("REGISTRAR");
        btnRegistrar.setBackground(Color.GREEN);
        btnRegistrar.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        JButton btnListar1 = new JButton("LISTAR 1");
        btnListar1.setBackground(Color.WHITE);
        btnListar1.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        JButton btnListar2 = new JButton("LISTAR 2");
        btnListar2.setBackground(Color.WHITE);
        btnListar2.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        JButton btnBuscar = new JButton("BUSCAR");
        btnBuscar.setBackground(Color.CYAN);
        btnBuscar.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));
        JButton btnRegresar = new JButton("REGRESAR");
        btnRegresar.setBackground(Color.RED);
        btnRegresar.setForeground(Color.WHITE);
        btnRegresar.setCursor(Cursor.getPredefinedCursor(Cursor.HAND_CURSOR));

        panelFooter.add(btnRegistrar);
        panelFooter.add(btnListar1);
        panelFooter.add(btnListar2);
        panelFooter.add(btnBuscar);
        panelFooter.add(btnRegresar);

        add(panelFooter, BorderLayout.SOUTH);

        JPanel panelBody = new JPanel(new GridLayout(1, 2, 40, 0));
        panelBody.setBorder(BorderFactory.createEmptyBorder(20, 40, 20, 40)); // Padding
        panelBody.setBackground(new Color(0,51,102));

        JPanel panelFoto = back;
        panelFoto.setBackground(new Color(0,51,102));

        panelBody.add(panelFoto);

        JPanel panelForm = new JPanel(new GridBagLayout());
        panelForm.setBackground(new Color(0,51,102));
        GridBagConstraints gbc = new GridBagConstraints();
        gbc.insets = new Insets(10, 8, 10, 8);
        gbc.fill = GridBagConstraints.HORIZONTAL;
        
        JLabel lbl1 = new JLabel("Nombre:");
        lbl1.setForeground(Color.WHITE);
        JLabel lbl2 = new JLabel("Paterno:");
        lbl2.setForeground(Color.WHITE);
        JLabel lbl3 = new JLabel("Materno:");
        lbl3.setForeground(Color.WHITE);
        JLabel lbl4 = new JLabel("Edad:");
        lbl4.setForeground(Color.WHITE);
        JLabel lbl5 = new JLabel("Facultad:");
        lbl5.setForeground(Color.WHITE);
        
        txtNombre = new JTextField(20);
        txtApellidoP = new JTextField(20);
        txtApellidoM = new JTextField(20);
        txtEdad = new JTextField(20);
        txtFacultad = new JTextField(20);

        gbc.gridx = 0; gbc.gridy = 0; gbc.anchor = GridBagConstraints.LINE_END;
        panelForm.add(lbl1, gbc);
        gbc.gridx = 1; gbc.gridy = 0; gbc.anchor = GridBagConstraints.LINE_START; gbc.weightx = 1.0;
        panelForm.add(txtNombre, gbc);

        gbc.gridx = 0; gbc.gridy = 1; gbc.anchor = GridBagConstraints.LINE_END; gbc.weightx = 0;
        panelForm.add(lbl2, gbc);
        gbc.gridx = 1; gbc.gridy = 1; gbc.anchor = GridBagConstraints.LINE_START; gbc.weightx = 1.0;
        panelForm.add(txtApellidoP, gbc);

        gbc.gridx = 0; gbc.gridy = 2; gbc.anchor = GridBagConstraints.LINE_END; gbc.weightx = 0;
        panelForm.add(lbl3, gbc);
        gbc.gridx = 1; gbc.gridy = 2; gbc.anchor = GridBagConstraints.LINE_START; gbc.weightx = 1.0;
        panelForm.add(txtApellidoM, gbc);

        gbc.gridx = 0; gbc.gridy = 3; gbc.anchor = GridBagConstraints.LINE_END; gbc.weightx = 0;
        panelForm.add(lbl4, gbc);
        gbc.gridx = 1; gbc.gridy = 3; gbc.anchor = GridBagConstraints.LINE_START; gbc.weightx = 1.0;
        panelForm.add(txtEdad, gbc);

        gbc.gridx = 0; gbc.gridy = 4; gbc.anchor = GridBagConstraints.LINE_END; gbc.weightx = 0;
        panelForm.add(lbl5, gbc);
        gbc.gridx = 1; gbc.gridy = 4; gbc.anchor = GridBagConstraints.LINE_START; gbc.weightx = 1.0;
        panelForm.add(txtFacultad, gbc);
        panelBody.add(panelFoto);
        panelBody.add(panelForm);
        add(panelBody, BorderLayout.CENTER);
        btnRegistrar.addActionListener(e -> registrarHombre());
        btnRegresar.addActionListener(e -> {
            ventanaPrincipal.setVisible(true);
            this.dispose();
        });

        btnBuscar.addActionListener(e -> {
            String texto = JOptionPane.showInputDialog("Ingrese nombre o apellido:");
            carrera.buscar(texto);
        });
        btnListar1.addActionListener(e -> carrera.listar1());
        btnListar2.addActionListener(e -> carrera.listar2());
    }

    private void registrarHombre() {
        try {
            String nombre = txtNombre.getText();
            String apP = txtApellidoP.getText();
            String apM = new String(txtApellidoM.getText());
            int edad = Integer.parseInt(txtEdad.getText());
            String facultad = txtFacultad.getText();

            Hombre h = new Hombre(nombre, apP, apM, edad, facultad);
            if (carrera.registrarAsistente(h)) {
                JOptionPane.showMessageDialog(this, "Registro exitoso!");
                // Limpiar campos después de registrar
                txtNombre.setText("");
                txtApellidoP.setText("");
                txtApellidoM.setText("");
                txtEdad.setText("");
                txtFacultad.setText("");
            } else {
                JOptionPane.showMessageDialog(this, "Error al registrar (posiblemente duplicado).");
            }
        } catch (NumberFormatException ex) {
            JOptionPane.showMessageDialog(this, "Error: La edad debe ser un número.");
        } catch (Exception ex) {
            JOptionPane.showMessageDialog(this, "Verifica los datos ingresados.");
        }
    }
}